# FY20-IoTPnP-HOLs

./: .gitignore  LICENSE  README.md
Dev-Builder-MXChip/: README.md
Dev-Builder-MXChip-IoTCentral/: README.md
Dev-Builder-MXChip-IoTCentral/central_app/devkit_device/.azurecomponent/: azureconfig.json
Dev-Builder-MXChip-IoTCentral/central_app/devkit_device/Device/src/: mxchip_iot_devkit_impl.c  mxchip_iot_devkit_impl.h  pnp_device.c  pnp_device.h
Dev-Builder-MXChip-IoTCentral/central_app/devkit_device/Device/src/utilities/: deviceinfo_interface.c  deviceinfo_interface.h  digitaltwin_client_helper.c  digitaltwin_client_helper.h  digitaltwin_serializer.c  digitaltwin_serializer.h  leds_interface.c  leds_interface.h  screen_interface.c  screen_interface.h  sensors_interface.c  sensors_interface.h  settings_interface.c  settings_interface.h
Dev-Builder-MXChip-IoTCentral/central_app_sim/devkit_device/: CMakeLists.txt  README.md  main.c  mxchip_iot_devkit_impl.c  mxchip_iot_devkit_impl.h  pnp_device.c  pnp_device.h
Dev-Builder-MXChip-IoTCentral/central_app_sim/devkit_device/utilities/: deviceinfo_interface.c  deviceinfo_interface.h  digitaltwin_client_helper.c  digitaltwin_client_helper.h  digitaltwin_serializer.c  digitaltwin_serializer.h  leds_interface.c  leds_interface.h  screen_interface.c  screen_interface.h  sensors_interface.c  sensors_interface.h  settings_interface.c  settings_interface.h
Dev-Builder-MXChip/devicemodel/sensorbox_app/.azurecomponent/: azureconfig.json
Dev-Builder-MXChip/devicemodel/sensorbox_app/Device/: main.ino
Dev-Builder-MXChip/devicemodel/sensorbox_app/Device/src/: SensorboxModel_impl.c  SensorboxModel_impl.h  pnp_device.c  pnp_device.h
Dev-Builder-MXChip/devicemodel/sensorbox_app/Device/src/utilities/: deviceinfo_interface.c  deviceinfo_interface.h  (+6 more)
Slides/: README.md
Solution-Builder-Lab/: README.md
